--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media only screen and (min-width: 600px) {
+    body {
+      background-color: rgb(39, 43, 44);
+    }
+
+
 html{
     height: 100%;
 }
@@ -27,6 +33,15 @@ nav > a {
     color: aliceblue;
 }
 
+.above_table {
+    margin: 20px;
+}
+
+.photo_caption {
+     color: aliceblue;
+     margin-top: 1px;
+}
+
 th, td{
     border: 2px solid aliceblue;
     padding: 10px;
@@ -51,6 +66,11 @@ a:hover {
 #middle {
     margin-top: 50px;
     margin-left: 10px;
+}
+
+#flower {
+    margin-top: 40px;
+    margin-bottom: 1px;
 }
 
 h1 {
