--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ nav > a {
     height: 60px;
     padding-top: 40px;
     background-color: rgb(177, 170, 171);
+    border-radius: 15px;
 }
 .tabledata {
     border: 2px solid aliceblue;
@@ -40,6 +41,23 @@ nav > a {
 .photo_caption {
      color: aliceblue;
      margin-top: 1px;
+}
+
+.container {
+    background: black;
+}
+
+.row {
+    background: gray;
+}
+
+.col-sm {
+    background: white;
+    height: 300px;
+    width: 300px;
+    margin: 20px;
+    line-height: 300px;
+    text-align: center;
 }
 
 th, td{
