--- a/style.css
+++ b/style.css
@@ -1,32 +1,19 @@
-@media only screen and (min-width: 600px) {
-    body {
-      background-color: rgb(39, 43, 44);
-    }
 
 
-html{
+html {
     height: 100%;
-}
-
-body {
-    background-color: #000000;
-    background-image: linear-gradient(180deg, #444343, #000000, #444343);
+    background: linear-gradient(180deg, #444343, #000000, #444343);
     background-size: cover;  
     z-index: 5;
 }
 
-nav > a {
-    font-size: 18px;
-    margin-left: 100px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
+@media only screen and (max-width: 600px) {
+    html {
+      background: gray;
+    }
+  }
 
-.navigation {
-    height: 60px;
-    padding-top: 40px;
-    background-color: rgb(177, 170, 171);
-    border-radius: 15px;
-}
+
 .tabledata {
     border: 2px solid aliceblue;
     border-collapse: collapse;
@@ -63,18 +50,6 @@ nav > a {
 th, td{
     border: 2px solid aliceblue;
     padding: 10px;
-}
-
-a:link {
-    color: rgb(0, 0, 0);
-}
-
-a:visited {
-    color:rgb(153, 0, 145);
-}
-
-a:hover {
-    color:rgb(6, 230, 211);
 }
 
 #top {
